--- a/edit-profile1.html
+++ b/edit-profile1.html
@@ -42,15 +42,14 @@
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
-                    <img class="img-fluid" src="img/nav-img-profile.svg" alt="">
+                    <img class="img-fluid" src="img/nav-img-profile.svg" alt="" id="nav-image">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link dropdown-toggle" href="#" id="nav-name" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Jenri Dewany
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
+                                <a class="dropdown-item" href="#">Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -382,7 +381,23 @@
             }
             return val;
         }
+        function getProfile(){
+            $.ajax({
+                url: 'https://api.vocatinest.com/profiles/'+localStorage.getItem('user_id'),
+                contentType: "application/json; charset=utf-8",
+                dataType: 'json',
+                method: 'GET',
+                success: (data) => {
+                    $('#nav-name').html(data.data.name);
+                    $('#nav-image').attr('src', data.data.image);
+                },
+                error: (error) => {
+                    console.log(error)
+                }
+            });
+        }
         $(function(){
+            getProfile();
             for(let i=0; i<12; i++){
                 $('.month-filled').append('<option value="'+numberToStringDigit(i+1)+'">'+numberToStringDigit(i+1)+'</option>');
             }
