added logout function

--- a/edit-profil3.html
+++ b/edit-profil3.html
@@ -49,7 +49,7 @@
                                 Jenri Dewany
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Logout</a>
+                                <a class="dropdown-item" onclick="logout()">Logout</a>
                             </div>
                         </li>
                     </ul>
@@ -323,6 +323,11 @@
                     $('#error').html('<div class="alert alert-danger" role="alert">Ups, terjadi kesalahan</div>');
                 }
             });
+        }
+
+        function logout(){
+            localStorage.clear();
+            window.location.href = "masuk.html";
         }
         $(function(){
             getProfile();
