--- a/masuk.html
+++ b/masuk.html
@@ -11,6 +11,7 @@
     <link href="style-responsive.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/2be1e9ecb7.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -25,17 +26,17 @@
 
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="#">Beranda</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Kenali Dirimu</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
+                        <a class="nav-link" href="#">Cari Pekerjaan</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
+                        <a class="nav-link" href="#">Cari Pelatihan</a>
                     </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -98,21 +99,38 @@
                             <a class="nav-link" href="#">Kenali Dirimu</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cari-kerja.html">Cari Pekerjaan</a>
+                            <a class="nav-link" href="#">Cari Pekerjaan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="cari-pelatihan.html">Cari Pelatihan</a>
+                            <a class="nav-link" href="#">Cari Pelatihan</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Bantuan</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Kontak Kami</a>
+                            <a class="nav-link" href="kontak.html">Kontak Kami</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Ketentuan & Kondisi</a>
                         </li>
                     </ul>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="background-color: #333333; color: white; padding-top: 32px; padding-bottom: 32px;">
+            <div class="container">
+                <div class="col-md-12">
+                    <b>VOCATINEST (PT KARYA VOKASI INDONESIA)</b>
+                    <table>
+                        <tr>
+                            <td width="30"><i class="fas fa-building"></i></td>
+                            <td>Office 8, level 18-A, Jl. Jend Sudirman, SCBD LOT 28, Senayan, Kebayoran Baru, DKI Jakarta, Indonesia</td>
+                        </tr>
+                        <tr>
+                            <td><i class="far fa-envelope"></i></td>
+                            <td>info@vocatinest.com</td>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
